tests/specs/ecosystem/vxern/dexonline_scraper/0_1_2.test
vxern/dexonline-scraper/0.1.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:cheerio@^1.0.0-rc.12": "npm:cheerio@1.0.0-rc.12"
    },
    "npm": {
      "boolbase@1.0.0": {
        "integrity": "sha512-JZOSA7Mo9sNGB8+UjSgzdLtokWAky1zbztM3WRLCbZ70/3cTANmQmOdR7y2g+J0e2WXywy1yS468tY+IruqEww==",
        "dependencies": {}
      },
      "cheerio-select@2.1.0": {
        "integrity": "sha512-9v9kG0LvzrlcungtnJtpGNxY+fzECQKhK4EGJX2vByejiMX84MFNQw4UxPJl3bFbTMw+Dfs37XaIkCwTZfLh4g==",
        "dependencies": {
          "boolbase": "boolbase@1.0.0",
          "css-select": "css-select@5.1.0",
          "css-what": "css-what@6.1.0",
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3",
          "domutils": "domutils@3.1.0"
        }
      },
      "cheerio@1.0.0-rc.12": {
        "integrity": "sha512-VqR8m68vM46BNnuZ5NtnGBKIE/DfN0cRIzg9n40EIq9NOv90ayxLBXA8fXC5gquFRGJSTRqBq25Jt2ECLR431Q==",
        "dependencies": {
          "cheerio-select": "cheerio-select@2.1.0",
          "dom-serializer": "dom-serializer@2.0.0",
          "domhandler": "domhandler@5.0.3",
          "domutils": "domutils@3.1.0",
          "htmlparser2": "htmlparser2@8.0.2",
          "parse5": "parse5@7.1.2",
          "parse5-htmlparser2-tree-adapter": "parse5-htmlparser2-tree-adapter@7.0.0"
        }
      },
      "css-select@5.1.0": {
        "integrity": "sha512-nwoRF1rvRRnnCqqY7updORDsuqKzqYJ28+oSMaJMMgOauh3fvwHqMS7EZpIPqK8GL+g9mKxF1vP/ZjSeNjEVHg==",
        "dependencies": {
          "boolbase": "boolbase@1.0.0",
          "css-what": "css-what@6.1.0",
          "domhandler": "domhandler@5.0.3",
          "domutils": "domutils@3.1.0",
          "nth-check": "nth-check@2.1.1"
        }
      },
      "css-what@6.1.0": {
        "integrity": "sha512-HTUrgRJ7r4dsZKU6GjmpfRK1O76h97Z8MfS1G0FozR+oF2kG6Vfe8JE6zwrkbxigziPHinCJ+gCPjA9EaBDtRw==",
        "dependencies": {}
      },
      "dom-serializer@2.0.0": {
        "integrity": "sha512-wIkAryiqt/nV5EQKqQpo3SToSOV9J0DnbJqwK7Wv/Trc92zIAYZ4FlMu+JPFW1DfGFt81ZTCGgDEabffXeLyJg==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3",
          "entities": "entities@4.5.0"
        }
      },
      "domelementtype@2.3.0": {
        "integrity": "sha512-OLETBj6w0OsagBwdXnPdN0cnMfF9opN69co+7ZrbfPGrdpPVNBUj02spi6B1N7wChLQiPn4CSH/zJvXw56gmHw==",
        "dependencies": {}
      },
      "domhandler@5.0.3": {
        "integrity": "sha512-cgwlv/1iFQiFnU96XXgROh8xTeetsnJiDsTc7TYCLFd9+/WNkIqPTxiM/8pSd8VIrhXGTf1Ny1q1hquVqDJB5w==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0"
        }
      },
      "domutils@3.1.0": {
        "integrity": "sha512-H78uMmQtI2AhgDJjWeQmHwJJ2bLPD3GMmO7Zja/ZZh84wkm+4ut+IUnUdRa8uCGX88DiVx1j6FRe1XfxEgjEZA==",
        "dependencies": {
          "dom-serializer": "dom-serializer@2.0.0",
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3"
        }
      },
      "entities@4.5.0": {
        "integrity": "sha512-V0hjH4dGPh9Ao5p0MoRY6BVqtwCjhz6vI5LT8AJ55H+4g9/4vbHx1I54fS0XuclLhDHArPQCiMjDxjaL8fPxhw==",
        "dependencies": {}
      },
      "htmlparser2@8.0.2": {
        "integrity": "sha512-GYdjWKDkbRLkZ5geuHs5NY1puJ+PXwP7+fHPRz06Eirsb9ugf6d8kkXav6ADhcODhFFPMIXyxkxSuMf3D6NCFA==",
        "dependencies": {
          "domelementtype": "domelementtype@2.3.0",
          "domhandler": "domhandler@5.0.3",
          "domutils": "domutils@3.1.0",
          "entities": "entities@4.5.0"
        }
      },
      "nth-check@2.1.1": {
        "integrity": "sha512-lqjrjmaOoAnWfMmBPL+XNnynZh2+swxiX3WUE0s4yEHI6m+AwrK2UZOimIRl3X/4QctVqS8AiZjFqyOGrMXb/w==",
        "dependencies": {
          "boolbase": "boolbase@1.0.0"
        }
      },
      "parse5-htmlparser2-tree-adapter@7.0.0": {
        "integrity": "sha512-B77tOZrqqfUfnVcOrUvfdLbz4pu4RopLD/4vmu3HUPswwTA8OH0EMW9BlWR2B0RCoiZRAHEUu7IxeP1Pd1UU+g==",
        "dependencies": {
          "domhandler": "domhandler@5.0.3",
          "parse5": "parse5@7.1.2"
        }
      },
      "parse5@7.1.2": {
        "integrity": "sha512-Czj1WaSVpaoj0wbhMzLmWD69anp2WH7FXMB9n1Sy8/ZFF9jolSQVMu1Ij5WIyGmcBmhk7EOndpO4mIpihVqAXw==",
        "dependencies": {
          "entities": "entities@4.5.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { DictionaryFlags, MatchingModes, Synthesis, Inflection, Links };
                          ~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:36:27

error: Type checking failed.

